feat: update `neofetch` config

--- a/dotfiles/.config/neofetch/config.conf
+++ b/dotfiles/.config/neofetch/config.conf
@@ -1,14 +1,14 @@
 print_info () {
-    info "${c1} 󰊠" host
-    info "${c1} " distro
-    info "${c1} 󰘚" cpu
-    info "${c1} 󰡷" gpu
-    info "${c1} 󰍛" memory
-    info "${c1} 󰋊" disk
+    info "${cl0} 󰊠" host
+    info "${cl0} " distro
+    info "${cl0} 󰘚" cpu
+    info "${cl0} 󰡷" gpu
+    info "${cl0} 󰍛" memory
+    info "${cl0} 󰋊" disk
 
     prin "\n"
 
-    info "${c1} " song
+    info "${cl0} " song
 
     info
 }
@@ -24,7 +24,8 @@ disk_show=("/")
 image_backend="ascii"
 image_source="${HOME}/.config/neofetch/assets/catppuccin"
 
-cl1="green"
+mauve="\033[38;5;183m"
+cl0="${mauve}"
 
 colors=(distro)
 ascii_colors=(distro)
